first kindof working commit

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,28 +1,38 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "Kestrel": {
+        "Endpoints": {
+            "Http": {
+                "Url": "http://localhost:5040"
+            },
+            "Https": {
+                "Url": "https://localhost:5041"
+            }
+        }
+    },
+    "AllowedHosts": "*",
+    "InfoAutoConfiguration": {
+        "BaseUrl": "https://replace-me-api.infoauto.com.ar/cars",
+        "PubEndpoint": "/pub",
+        "AuthEndpoint": "/auth",
+        "User": "InfoAutoUser",
+        "Password": "InfoAutoPassword"
+    },
+    "CotizadorConfiguration": {
+        "BaseUrl": "https://replace-me-cotizador-adminse.com.ar:9443",
+        "LoginEndpoint": "/api/auth/login",
+        "CotizadorEndpoint": "/api/auth/cotizador",
+        "User": "CotizadorUser",
+        "Password": "CotizadorPassword"
+    },
+    "AdminseConfiguration": {
+        "BaseUrl": "https://adminse.com.ar",
+        "ProvinceEndpoint": "/api/provinces",
+        "LocationEndpoint": "/api/provinces/{locationId}/locations"
     }
-  },
-  "AllowedHosts": "*",
-  "InfoAutoConfiguration": {
-      "BaseUrl": "https://replace-me-api.infoauto.com.ar/cars",
-      "PubEndpoint": "/pub",
-      "AuthEndpoint": "/auth",
-      "User": "InfoAutoUser",
-      "Password": "InfoAutoPassword",
-  },
-  "CotizadorConfiguration": {
-      "BaseUrl": "https://replace-me-cotizador-adminse.com.ar:9443",
-      "LoginEndpoint": "/api/auth/login",
-      "CotizadorEndpoint": "/api/auth/cotizador",
-      "User": "CotizadorUser",
-      "Password": "CotizadorPassword",
-  },
-  "AdminseConfiguration": {
-      "BaseUrl": "https://adminse.com.ar",
-      "ProvinceEndpoint": "/api/provinces",
-      "LocationEndpoint": "/api/provinces/{locationId}/locations",
-  }
 }
