--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nafra_cotizador",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.infoauto.com.ar",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,6 +11,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "express": "^4.18.3",
+    "http-proxy-middleware": "^2.0.6",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
