--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.4",
+    "devextreme": "^23.2.5",
+    "devextreme-react": "^23.2.5",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
